--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,10 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "vk-api (>=11.10.0,<12.0.0)"
+    "vk-api (>=11.10.0,<12.0.0)",
+    "python-dotenv (>=1.2.1,<2.0.0)",
+    "sqlalchemy (>=2.0.44,<3.0.0)",
+    "transitions (>=0.9.3,<0.10.0)",
 ]
 
 
@@ -18,5 +21,6 @@ build-backend = "poetry.core.masonry.api"
 
 [dependency-groups]
 dev = [
-    "black (>=25.11.0,<26.0.0)"
+    "black (>=25.11.0,<26.0.0)",
+    "ruff (>=0.14.5,<0.15.0)"
 ]
