checking with the ruff linter

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,3 +26,19 @@ dev = [
     "pytest (>=9.0.1,<10.0.0)",
     "pytest-cov (>=7.0.0,<8.0.0)"
 ]
+
+[tool.ruff]
+# исключения директорий
+exclude = [
+  ".git",
+  ".venv",
+]
+# максимальная длина строки (по умолчанию 88, как у Black)
+line-length = 88
+
+[tool.ruff.lint]
+# Включаем все стандартные категории правил
+select = ["E", "F", "W", "I"]
+
+# Разрешаем автоисправление
+fixable = ["ALL"]
